--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,12 +5,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    border: 4px solid #ec1d24;
 }
 
 .logo{
     font-weight: bolder;
     display: inline;
-    background-color: #ec1d24;
+    /* background-color: #ec1d24; */
+    color: #ffffff;
     padding: 5px 10px;
-    color: aliceblue;
 }
