--- a/src/components/MyLeague/MyLeague.css
+++ b/src/components/MyLeague/MyLeague.css
@@ -1,3 +1,4 @@
+/* Reset button style  */
 .reset{
     border: 2px solid #151515;
     color: #151515;
@@ -7,8 +8,9 @@
     font-weight: bold;
     color: aliceblue;
 }
+
+/* Random button style  */
 .random{
-    /* background-color: #151515; */
     border: 2px solid #ff0000;
     color: #151515;
 }
